[tool.poetry]
name = "firstexample"
version = "0.1.0"
description = ""
authors = ["RitwickJoshi <ritwickjoshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
bs4 = "^0.0.1"
PrettyTable = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
